--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ See the end for copying conditions.
 ** libgnutls: When in compatibility mode allow for a wrong version in the
 RSA PMS.
 
+** libgnutls: Corrected issues in DTLS heartbeat parsing. Reported by
+Joke de Buhr.
+
 ** libgnutls: Added GNUTLS_PRIVKEY_SIGN_FLAG_TLS1_RSA which allows 
 gnutls_privkey_sign_hash() to operate as with gnutls_privkey_sign_raw_data().
 This makes it consistent with verification with GNUTLS_PUBKEY_VERIFY_FLAG_TLS1_RSA
