--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ RSA PMS.
 ** libgnutls: Corrected issues in DTLS heartbeat parsing. Reported by
 Joke de Buhr.
 
+** libgnutls: Heartbeat support is enabled by default.
+
 ** libgnutls: Added GNUTLS_PRIVKEY_SIGN_FLAG_TLS1_RSA which allows 
 gnutls_privkey_sign_hash() to operate as with gnutls_privkey_sign_raw_data().
 This makes it consistent with verification with GNUTLS_PUBKEY_VERIFY_FLAG_TLS1_RSA
