--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ This makes it consistent with verification with GNUTLS_PUBKEY_VERIFY_FLAG_TLS1_R
 flag.
 
 ** API and ABI modifications:
+gnutls_sign_algorithm_get_client: Added
 GNUTLS_PRIVKEY_SIGN_FLAG_TLS1_RSA: Added
 
 
