--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ See the end for copying conditions.
 
 ** libgnutls: Added UMAC-96 and UMAC-128 MACs (experimental)
 
+** libgnutls: Added support for DTLS 1.2.
+
 ** API and ABI modifications:
 gnutls_cipher_get_iv_size: Added
 gnutls_hmac_set_nonce: Added
