--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 3.1.11 (unreleased)
 
+** libgnutls: Added priority string VERS-DTLS-ALL.
+
 ** libgnutls: When in compatibility mode allow for a wrong version in the
 RSA PMS.
 
