--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,9 @@ gnutls_privkey_sign_hash() to operate as with gnutls_privkey_sign_raw_data().
 This makes it consistent with verification with GNUTLS_PUBKEY_VERIFY_FLAG_TLS1_RSA
 flag.
 
+** libgnutls: Fixes in unknown DN string printing. Issues reported and
+patches by Stef Walter.
+
 ** certtool: When generating certificates the default answer for marking the
 key for signing and encryption is yes.
 
