--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.11 (unreleased)
+* Version 3.1.11 (released 2013-05-10)
 
 ** libgnutls: Added priority string VERS-DTLS-ALL.
 
