--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.2.0 (unreleased)
+* Version 3.2.0 (released 2013-05-10)
 
 ** libgnutls: Use nettle's elliptic curve implementation.
 
