--- a/doc/cha-internals.texi
+++ b/doc/cha-internals.texi
@@ -542,7 +542,7 @@ To override the big number number operations back-end.
 
 @item @code{gnutls_crypto_pk_register}:
 To override the public key encryption back-end. This is tied to the
-big number operations so either none or both of them should be overriden.
+big number operations so either none or both of them should be overridden.
 
 @end itemize
 
