--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,9 @@ in DTLS.
 
 ** libgnutls: Fixes in DTLS record overhead size calculations.
 
+** libgnutls: gnutls_handshake_get_last_in() was fixed. Reported
+by Mann Ern Kang.
+
 ** API and ABI modifications:
 gnutls_session_set_id: Added
 
