--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.30 (unreleased)
 
+** libgnutls: Allow ECC when in SSL 3.0 to work-around a bug in certain
+openssl versions.
+
 ** libgnutls: When in compatibility mode allow for a wrong version in the
 RSA PMS.
 
