--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.1.12 (unreleased)
 
+** libgnutls: Allow ECC when in SSL 3.0 to work-around a bug in certain
+openssl versions.
+
 ** libgnutls: Fixes in interrupted function resumption. Report
 and patch by Tim Kosse.
 
