--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.30 (unreleased)
+* Version 3.0.30 (released 2013-06-01)
 
 ** libgnutls: Allow ECC when in SSL 3.0 to work-around a bug in certain
 openssl versions.
