--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ See the end for copying conditions.
 ** libgnutls: Ensure that gnutls_dtls_set_mtu() cannot exceed the
 maximum allowed DTLS size.
 
+** libgnutls: Fixes in discovery of trusted objects (CA certificates)
+PKCS #11 in tokens. Patch by Stef Walter.
+
 ** API and ABI modifications:
 No changes since last version.
 
