--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,8 @@ See the end for copying conditions.
 
 ** libgnutls: Fixes in parsing of priority strings. Patch by Stefan Buehler.
 
-** libgnutls: %COMPAT will allow large packets from TLS-incompliant servers
-(this behavior was the default and was accidentally undone in 3.2.2)
+** libgnutls: Solve issue with received TLS packets that exceed 2^14. 
+(this fixes a bug that was accidentally introduced in 3.2.2)
 
 ** API and ABI modifications:
 gnutls_priority_kx_list: Added
