--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 3.1.14 (unreleased)
 
+** libgnutls: Added the PFS priority string option.
+
 ** libgnutls: Fixes in gnutls_record_send_range(). Report and initial fix by 
 Alfredo Pironti.
 
