mention that new padding is currently a gnutls extension

--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -1039,7 +1039,7 @@ will use the latest TLS version record version in client hello.
 will enable the new padding extension negotiation. If the new padding extension
 is negotiated, GnuTLS will use a more efficient length-hiding mechanism.
 Use @funcref{gnutls_record_can_use_length_hiding} to check whether length-hiding
-can be used in the current session.
+can be used in the current session. This is a GnuTLS extension to the protocol.
 
 @end multitable
 @caption{Special priority string keywords.}
