--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.1.14 (unreleased)
 
+** libgnutls: Fixes when session tickets and session DB are used.
+Report and initial patch by Stefan Buehler.
+
 ** libgnutls: Added the PFS priority string option.
 
 ** libgnutls: Fixes in gnutls_record_send_range(). Report and initial fix by 
