--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.31 (unreleased)
 
+** libgnutls: Fixes when session tickets and session DB are used.
+Report and initial patch by Stefan Buehler.
+
 ** libgnutls: Ensure that gnutls_dtls_set_mtu() cannot exceed the
 maximum allowed DTLS size.
 
